--- a/CyberProject/CyberUser/templates/CyberUser/base.html
+++ b/CyberProject/CyberUser/templates/CyberUser/base.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-
+    <title>News</title>
 </head>
 <body>
 
+{% include 'CyberUser/navbar.html' %}
 {% block content %}
 
 {% endblock %}
