--- a/CyberProject/CyberUser/templates/CyberUser/update_match_page.html
+++ b/CyberProject/CyberUser/templates/CyberUser/update_match_page.html
@@ -1,11 +1,8 @@
 {% extends 'CyberUser/base.html' %}
 {% block content %}
-<img src="{{ user.image.url }}">
 <form method="POST" action="">
     {% csrf_token %}
-    {% for frm in form%}
-        {{ frm }}
-    {% endfor %}
+    {{ form }}
     <input type="submit" name="Submit">
 </form>
 {% endblock %}
