--- a/CyberProject/CyberUser/templates/CyberUser/match_detail_page.html
+++ b/CyberProject/CyberUser/templates/CyberUser/match_detail_page.html
@@ -2,16 +2,18 @@
 {% block content %}
 <div class="post">
     <div class="">
-
         <h2><a href="">{{ matchs.title }}</a></h2>
         <p>{{ match.match_status|linebreaksbr  }}</p>
         {% for bet in bets %}
-        {{ bet.user }}
-        {{ bet.match }}
-        {{ bet.match_result }}
-        {{ bet.money }}
+            {{ bet.user }}
+            {{ bet.match }}
+            {{ bet.match_result }}
+            {{ bet.money }}
         {% endfor %}
-        <h2><a href="{% url 'update-match-page' match.id %}">Update Match</a></h2>
+        {% if request.user.is_superuser %}
+            <h2><a href="{% url 'update-match-page' match.id %}">Update Match</a></h2>
+
+        {% endif %}
         {{ wallet }}
         <h2>{{ matchs.match_result }}</h2>
         <form method="POST" action="">
